[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
module_name = "example"

[tool.poetry]
name = "dagster_test"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
appengine-python-standard = "^1.1.4"
dagster = "^1.4.15"
dagster-webserver = "^1.4.15"
pandas = "^2.1.1"
python = "~3.10.0"
matplotlib = "^3.8.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[[tool.poetry.source]]
name = "grpcio"
url = "https://github.com/dagster-io/build-grpcio/wiki/Wheels"
priority = "primary"
